@@ -400,36 +400,33 @@ planned-disbursement a:active		{color:#FFAB5E;}
 planned-disbursement:last-of-type	{border-bottom:0px solid #1E90FF; margin-bottom:10px;}
 planned-disbursement:nth-of-type(1)	{margin-top:0px; padding-top:0; border-top:0;}
 
-span.span_planned-disbursement:before					{content:"Planned Disbursements"; font-size:20px; color:#FFF; background-color:rgba(17,46,105,0.9); display:block; padding:20px 40px; margin-bottom:25px; width:900px; margin-left:-10px;}
+span.span_planned-disbursement:before{content:"Planned Disbursements"; font-size:20px; color:#FFF; background-color:rgba(17,46,105,0.9); display:block; padding:20px 40px; margin-bottom:25px; width:900px; margin-left:-10px;}
 planned-disbursement:nth-of-type(1) period-start:before,
 planned-disbursement:nth-of-type(1) period-end:before,
 planned-disbursement:nth-of-type(1) value:before,
 planned-disbursement:nth-of-type(1) provider-org:before,
 planned-disbursement:nth-of-type(1) receiver-org:before	{content:""; display:block; padding-bottom:10px; border-bottom:1px solid #aaa; margin-bottom:15px; font-size:14px; color:#CCC; line-height:1.35em;}
-planned-disbursement:nth-of-type(1) period-end:after	{content:"TYPE"; font-size:14px; color:#CCC; display:block; position:absolute; top:0px; right:-45px; line-height:1.35em;}
+planned-disbursement:nth-of-type(1) span-planned-type:before{content:"TYPE"; width:260px; display:block; padding-bottom:10px; border-bottom:1px solid #aaa; margin-bottom:15px; font-size:14px; color:#CCC; line-height:1.35em;}
 planned-disbursement:nth-of-type(1) period-start:before {content:"START DATE"; width:110px;}
-planned-disbursement:nth-of-type(1) period-end:before	{content:"END DATE"; width:110px;}
-planned-disbursement:nth-of-type(1) value:before		{content:"VALUE"; width:660px;}
-planned-disbursement:nth-of-type(1) provider-org:before	{content:"PROVIDER"; width:130px;}
-planned-disbursement:nth-of-type(1) receiver-org:before	{content:"RECEIVER"; width:130px;}
-planned-disbursement[type="1"] value:after				{content:"Original"; position:absolute; left:10px; top:0px;}
-planned-disbursement[type="2"] value:after				{content:"Revised";  position:absolute; left:10px; top:0px;}
-
-planned-disbursement[type="1"]:nth-of-type(1) value:after, planned-disbursement[type="2"]:nth-of-type(1) value:after	{top:44px;}
+planned-disbursement:nth-of-type(1) period-end:before	{content:"END DATE"; width:120px;}
+planned-disbursement:nth-of-type(1) value:before		{content:"VALUE";}
+planned-disbursement:nth-of-type(1) provider-org:before	{content:"PROVIDER"; width:140px;}
+planned-disbursement:nth-of-type(1) receiver-org:before	{content:"RECEIVER"; width:140px;}
 
 planned-disbursement period-start,
 planned-disbursement period-end,
+span-planned-type,
 planned-disbursement value		 	{display:inline-block; vertical-align:top; color:#FFF; font-size:1.0em; line-height:1.35em;}
 planned-disbursement period-start 	{width:110px; max-width:110px; padding-left:40px;}
-planned-disbursement period-end	 	{width:110px; max-width:110px; position:relative;}
-planned-disbursement value 			{width:660px; max-width:660px; padding-right:40px; position:relative;}
+planned-disbursement period-end	 	{width:120px; max-width:120px;}
+span-planned-type				 	{width:260px; max-width:260px;}
+planned-disbursement value 			{width:110px; max-width:110px; padding-right:40px;}
 planned-disbursement provider-org,
-planned-disbursement receiver-org	{display:block; color:#FFF; font-size:1.0em; line-height:1.35em; padding-right:20px;}
-planned-disbursement provider-org 	{width:130px; max-width:130px; position:absolute; top:0; left:530px;}
-planned-disbursement receiver-org 	{width:130px; max-width:130px; position:absolute; top:0; left:680px;}
+planned-disbursement receiver-org	{width:120px; max-width:120px; display:inline-block; vertical-align:top; color:#FFF; font-size:1.0em; line-height:1.35em; padding-right:20px;}
 
-planned-disbursement:nth-of-type(n+2) provider-org,
-planned-disbursement:nth-of-type(n+2) receiver-org	{top:15px;}
+planned-disbursement span-narrative.org-role,
+planned-disbursement span-narrative.org-type,
+planned-disbursement span-narrative.org-ref	{display:inline; font-size:11px; line-height:24px; color:#CCC; border-radius:4px; padding:2px 4px 3px 4px; background-color:rgba(72,79,86,0.6); margin:0 auto;}
 
 
 /*	Transaction table
@@ -464,6 +461,10 @@ value span			{font-size:12px; color:#ccc;}
 provider-org div, receiver-org div	{display:block;}
 span-narrative.provider-org-ref,
 span-narrative.receiver-org-ref		{display:inline; font-size:11px; line-height:initial; color:#CCC; margin:0 auto;}
+
+transaction span-narrative.org-role,
+transaction span-narrative.org-type,
+transaction span-narrative.org-ref	{display:inline; font-size:11px; line-height:24px; color:#CCC; margin:0 auto; border-radius:4px; padding:2px 4px 3px 4px; background-color:rgba(72,79,86,0.6);}
 
 transaction sector	{display:none;}
 
