@@ -565,16 +565,15 @@ planned-disbursement:nth-of-type(1) value:before,
 planned-disbursement:nth-of-type(1) provider-org:before,
 planned-disbursement:nth-of-type(1) receiver-org:before	{color:var(--base15); border-bottom:2px solid var(--base03);}
 
-planned-disbursement:nth-of-type(1) period-end:after,
-planned-disbursement[type="1"] value:after,
-planned-disbursement[type="2"] value:after,
-planned-disbursement[type="1"]:nth-of-type(1) value:after,
-planned-disbursement[type="2"]:nth-of-type(1) value:after,
 planned-disbursement period-start,
 planned-disbursement period-end,
 planned-disbursement value,
 planned-disbursement provider-org,
 planned-disbursement receiver-org 			{color:var(--base15);}
+
+planned-disbursement span-narrative.org-role,
+planned-disbursement span-narrative.org-type,
+planned-disbursement span-narrative.org-ref {color:var(--base15); background-color:var(--base02_40);}
 
 
 /*	Transaction table
@@ -606,6 +605,10 @@ value span			{color:var(--base14);}
 
 span-narrative.provider-org-ref,
 span-narrative.receiver-org-ref		{color:var(--base15);}
+
+transaction span-narrative.org-role,
+transaction span-narrative.org-type,
+transaction span-narrative.org-ref	{color:var(--base15); background-color:var(--base02_40);}
 
 
 /*	Contact info for Publisher
