@@ -1,3 +1,13 @@
+Development Portal (2019-01-04 shi)
+==============================
+Hide policy-marker in refine search
+Display budget type for planned-disbursement
+Update planned-disbursement table in SAVi
+Display organisation type in transaction
+Update all themes with organisation type
+Update print-friendly css
+
+
 Development Portal (2019-01-03 shi)
 ==============================
 Fix humanitarian tag for Chrome
@@ -12,7 +22,6 @@ Display ref attributes in participating-org
 Display ref attributes in provider-org
 Display ref attributes in receiver-org
 Update print-friendly css
-Hide policy-marker in refine search
 
 
 Development Portal (2019-01-02 shi)
